--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zyqwst/json-schema-editor-vue"
+    "url": "git+https://github.com/Druelik/json-schema-editor-vue"
   },
   "homepage": "http://json-schema.sviip.com/",
   "license": " Apache-2.0 License",
@@ -25,19 +25,19 @@
     "lib": "vue-cli-service build --target lib --name json-schema-editor-vue --dest lib packages/index.js"
   },
   "dependencies": {
-    "ant-design-vue": "^1.7.2",
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "ant-design-vue": "^1.7.5",
+    "core-js": "^3.14.0",
+    "vue": "^2.6.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
+    "@vue/cli-service": "^4.5.13",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.13"
   },
   "eslintConfig": {
     "root": true,
