remove ant-design for gitlab/ui

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "lib": "vue-cli-service build --target lib --name json-schema-editor-vue --dest lib packages/index.js"
   },
   "dependencies": {
-    "ant-design-vue": "^1.7.5",
+    "@gitlab/ui": "^29.33.0",
+    "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.18.1",
     "core-js": "^3.14.0",
     "vue": "^2.6.13"
   },
