--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@gitlab/ui": "^29.34.0",
+    "@gitlab/svgs": "^1.199.0",
     "bootstrap": "4.5.3",
     "core-js": "^3.14.0",
     "vue": "^2.6.13"
